<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/mealBg"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:transitionName="mealsImage"
                app:srcCompat="@drawable/ic_meatt" />

            <TextView
                android:id="@+id/mealTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="25sp"
                android:layout_margin="10dp"
                android:text="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="14sp"
                    android:layout_margin="10dp"
                    android:text="@string/meal_price" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/meal_weight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/meal_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="14sp"
                    android:layout_margin="10dp"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/meal_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/app_name" />
            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>